--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
       body {
-        background-color: #0f172a;
+        background-color: #f1f5f9; /* slate-100 */
       }
     </style>
   <script type="importmap">
